--- a/frontend/app/styles/style.scss
+++ b/frontend/app/styles/style.scss
@@ -1,7 +1,8 @@
 @import './animate_properties.scss';
 @import './animate_shake.scss';
+@import './bootstrap.min.css';
+
 
 body {
   background: #FBF6D1;
 }
- 
