--- a/frontend/app/styles/style.scss
+++ b/frontend/app/styles/style.scss
@@ -1,6 +1,7 @@
 @import './animate_properties.scss';
 @import './animate_shake.scss';
 @import './bootstrap.min.css';
+@import './font-awesome-4.6.3/css/font-awesome.min.css';
 
 body {
   background: #FBF6D1;
